--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF3A44</color>
+    <color name="orange">#FF8086</color>
+    <color name="white_200">#E5E5E5</color>
+    <color name="black_200">#2E2E2E</color>
+
+    <color name="blue_300">#0088ff</color>
+    <color name="shimmer_background">#B3B3B3</color>
 </resources>
