--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,10 @@
         <item name="android:background">@color/white_200</item>
     </style>
 
+    <style name="AppTitleTextAppearance" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textColor">#0C0C0C</item>
+        <item name="android:textSize">@dimen/dimen_24_sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
