--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:padding="@dimen/dimen_16_dp"
     android:layout_height="match_parent"
+    android:padding="@dimen/dimen_16_dp"
     style="@style/ParentLayoutBackgroundAppearance"
     tools:context=".features.gallery.presentation.GalleryFragment">
 
@@ -19,16 +19,47 @@
         android:id="@+id/tv_app_headline"/>
 
 
+    <ProgressBar
+        android:layout_width="@dimen/dimen_48_dp"
+        android:layout_height="@dimen/dimen_48_dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/progress_circular"/>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="@dimen/dimen_0_dp"
         android:layout_height="wrap_content"
         android:id="@+id/galleryRV"
         tools:listitem="@layout/item_gallery_photos"
         app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+        app:spanCount="2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_app_headline"
         android:layout_marginTop="@dimen/dimen_16_dp"/>
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/prepend_progress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        tools:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_app_headline"/>
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/append_progress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        tools:visibility="visible"
+        android:indeterminate="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
