--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -1,65 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/ParentLayoutBackgroundAppearance"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/dimen_16_dp"
-    style="@style/ParentLayoutBackgroundAppearance"
     tools:context=".features.gallery.presentation.GalleryFragment">
 
 
     <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_app_headline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:theme="@style/AppTitleTextAppearance"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/tv_app_headline"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-    <ProgressBar
-        android:layout_width="@dimen/dimen_48_dp"
-        android:layout_height="@dimen/dimen_48_dp"
-        app:layout_constraintStart_toStartOf="parent"
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_progress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
+        android:animationCache="true"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/progress_circular"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_app_headline"
+        app:shimmer_repeat_mode="restart"
+        app:shimmer_shape="radial"
+        tools:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/layout_shimmer_photos" />
+
+            <include layout="@layout/layout_shimmer_photos" />
+
+            <include layout="@layout/layout_shimmer_photos" />
+
+            <include layout="@layout/layout_shimmer_photos" />
+
+            <include layout="@layout/layout_shimmer_photos" />
+
+            <include layout="@layout/layout_shimmer_photos" />
+
+            <include layout="@layout/layout_shimmer_photos" />
+
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/galleryRV"
         android:layout_width="@dimen/dimen_0_dp"
         android:layout_height="wrap_content"
-        android:id="@+id/galleryRV"
-        tools:listitem="@layout/item_gallery_photos"
+        android:layout_marginTop="@dimen/dimen_16_dp"
         app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-        app:spanCount="2"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_app_headline"
-        android:layout_marginTop="@dimen/dimen_16_dp"/>
+        app:spanCount="2"
+        tools:listitem="@layout/item_gallery_photos"
+        tools:visibility="gone" />
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/prepend_progress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        tools:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_app_headline"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_app_headline"
+        tools:visibility="visible" />
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/append_progress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:visibility="visible"
         android:indeterminate="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
