update in gallery photo ui and small images shown instead of thumb images

--- a/app/src/main/res/layout/item_gallery_photos.xml
+++ b/app/src/main/res/layout/item_gallery_photos.xml
@@ -7,13 +7,14 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:maxHeight="@dimen/dimen_300_dp"
+        android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginEnd="@dimen/dimen_8_dp"
         app:srcCompat="@mipmap/ic_launcher"
-        android:scaleType="fitXY"
         android:id="@+id/ivGalleryPhoto"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
