--- a/app/src/main/res/layout/fragment_full_screen_image.xml
+++ b/app/src/main/res/layout/fragment_full_screen_image.xml
@@ -3,11 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".features.full_screen_view.presentation.FullScreenImageFragment">
 
-    <TextView
+
+    <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:id="@+id/fullScreenIV"
+        android:scaleType="fitXY"
+        app:srcCompat="@mipmap/ic_launcher"/>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|start"
+        android:padding="@dimen/dimen_16_dp"
+        android:layout_marginTop="@dimen/dimen_32_dp"
+        android:layout_marginStart="@dimen/dimen_16_dp"
+        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
+        android:id="@+id/backBtn"/>
 
 </FrameLayout>
