--- a/app/src/main/res/layout/item_gallery_photos.xml
+++ b/app/src/main/res/layout/item_gallery_photos.xml
@@ -5,7 +5,7 @@
     android:layout_marginBottom="@dimen/dimen_8_dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxHeight="@dimen/dimen_300_dp"
@@ -14,6 +14,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginEnd="@dimen/dimen_8_dp"
+        app:shapeAppearance="?attr/actionButtonStyle"
+        app:shapeAppearanceOverlay="@style/imageViewRounded"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/ivGalleryPhoto"/>
 
