--- a/app/src/main/res/layout/layout_shimmer_photos.xml
+++ b/app/src/main/res/layout/layout_shimmer_photos.xml
@@ -5,7 +5,7 @@
     android:layout_marginBottom="@dimen/dimen_8_dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/shimmer_image_one"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.47"
@@ -14,9 +14,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/shimmer_image_two"
         android:layout_marginEnd="@dimen/dimen_8_dp"
+        app:shapeAppearance="?attr/actionButtonStyle"
+        app:shapeAppearanceOverlay="@style/imageViewRounded"
         android:background="@color/shimmer_background"/>
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/shimmer_image_two"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.47"
@@ -24,6 +26,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginEnd="@dimen/dimen_8_dp"
+        app:shapeAppearance="?attr/actionButtonStyle"
+        app:shapeAppearanceOverlay="@style/imageViewRounded"
         android:background="@color/shimmer_background"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
