--- a/app/src/main/res/layout/fragment_full_screen_image.xml
+++ b/app/src/main/res/layout/fragment_full_screen_image.xml
@@ -19,9 +19,36 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
         android:padding="@dimen/dimen_16_dp"
+        android:background="@drawable/bg_rounded_btn"
         android:layout_marginTop="@dimen/dimen_32_dp"
         android:layout_marginStart="@dimen/dimen_16_dp"
         app:srcCompat="@drawable/ic_baseline_arrow_back_24"
         android:id="@+id/backBtn"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="@dimen/dimen_32_dp">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dimen_16_dp"
+            android:background="@drawable/bg_rounded_btn"
+            app:srcCompat="@drawable/ic_baseline_save_alt_24"
+            android:id="@+id/downloadBtn"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dimen_16_dp"
+            android:layout_marginStart="@dimen/dimen_32_dp"
+            android:background="@drawable/bg_rounded_btn"
+            app:srcCompat="@drawable/ic_baseline_share_24"
+            android:id="@+id/shareBtn"/>
+
+    </LinearLayout>
 
 </FrameLayout>
