--- a/app/src/main/res/layout/fragment_full_screen_image.xml
+++ b/app/src/main/res/layout/fragment_full_screen_image.xml
@@ -32,10 +32,21 @@
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="@dimen/dimen_32_dp">
 
+        <ProgressBar
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:padding="@dimen/dimen_16_dp"
+            android:background="@drawable/bg_rounded_btn"
+            android:id="@+id/progress_circular"/>
+
+
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/dimen_16_dp"
+            tools:visibility="gone"
             android:background="@drawable/bg_rounded_btn"
             app:srcCompat="@drawable/ic_baseline_save_alt_24"
             android:id="@+id/downloadBtn"/>
