--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/dimen_16_dp"
-    android:fitsSystemWindows="true"
     tools:context=".features.gallery.presentation.GalleryFragment">
 
 
@@ -71,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_app_headline"
         app:spanCount="2"
         tools:listitem="@layout/item_gallery_photos"
-        tools:visibility="gone" />
+        tools:visibility="visible" />
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/prepend_progress"
