--- a/app/src/main/res/layout/fragment_full_screen_image.xml
+++ b/app/src/main/res/layout/fragment_full_screen_image.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fullScreenIV"
-        android:scaleType="fitXY"
-        app:srcCompat="@mipmap/ic_launcher"/>
+        android:scaleType="fitXY"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="wrap_content"
