feat: adding image info btn in full screen view

--- a/app/src/main/res/drawable/bg_rounded_btn.xml
+++ b/app/src/main/res/drawable/bg_rounded_btn.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:dither="true"
-    android:shape="oval">
+    android:shape="rectangle">
+    <corners android:radius="@dimen/dimen_16_dp"/>
     <solid android:color="#9FCAC5C5" />
 </shape>
